# insulin-bot

./: .gitignore  Cargo.toml  README.md  hmd.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  chapter_1.md
migrations/: 20240205233003_create_objects_table.sql  20240219162922_create_users_table.sql  20240220042412_sugar_level_measurements.sql  20240225140721_rename_sugar_measurements_table.sql  20240306235632_create_insulin_injections_table.sql
src/: active_chats.rs  auth.rs  auth_proxy.rs  bot_commands.rs  env.rs  event_handler.rs  event_handlers.rs  lib.rs  logging.rs  main.rs  schedules.rs
src/app/: help.rs  long_insulin.rs  mod.rs
src/app/insulin_injection/: mod.rs  repository.rs
src/app/sugar_measurement/: mod.rs  repository.rs
src/app/user/: mod.rs  repository.rs
src/commands/: add_user.rs  mod.rs  send_help.rs
src/common/: mod.rs  result.rs
src/db/: json_cell.rs  mod.rs  sugar_measurement_repository.rs  txn.rs  user_repository.rs
src/logging/: critical.rs  mod.rs
src/model/: mod.rs  sugar_level.rs
src/utils/: event_publisher.rs  mod.rs  send_payload.rs
src/utils/event_publisher/: event_bus.rs  mod.rs
