[package]
name = "insulin-bot"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clokwerk = { version = "0.4", features = ["async"] }
dotenv = "0.15"
env_logger = { version = "0.11", default-features = false }
futures-core = "0.3"
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "json"] }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
